--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,1 +1,15 @@
 /* Styles go here */
+.bg-danger {
+    background-color: #0000FF !important;
+}
+
+.btn-danger {
+    color: #fff;
+    background-color: #343a40 !important;
+    border-color: #343a40 !important;
+}
+
+small, .small {
+    font-size: 90%;
+	padding-left: 5px;
+}
